Updating css rules to prevent wrapping, #13

--- a/web/sass/partials/_two_col.scss
+++ b/web/sass/partials/_two_col.scss
@@ -132,3 +132,9 @@ div.olControlAttribution {
     background-color: #fff;
   } 
 }
+
+.dataLayersDiv {
+  .labelSpan {
+    white-space: nowrap;
+  }
+}
